LU-4916 lwp: don't add connection for missed LWP

The LWP isn't needed for some MDT-MDT connections,
e.g. for MDT0-MDT1, but lustre_lwp_add_conn() is called
for any 'add mdc' marker and cause error.

Patch add LWP connection only where it is needed.

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I930559a14a37ee0de27cea93113a3608e7ddf9cc
Reviewed-on: http://review.whamcloud.com/10272
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>